--- a/public/services.html
+++ b/public/services.html
@@ -49,7 +49,7 @@
 
     <main>
         <!-- Page Hero -->
-        <section class="page-hero">
+        <section class="page-hero" style="background-image: url('images/network-infrastructure.jpg');">
             <div class="container">
                 <h1>Our Services</h1>
                 <p>Comprehensive IT solutions tailored to help your business thrive in the digital age. From concept to deployment, we've got you covered.</p>
@@ -63,24 +63,23 @@
                 <div class="service-detail-card fade-in">
                     <div>
                         <div class="service-detail-icon">
-                            <i class="fas fa-code"></i>
+                            <i class="fas fa-database"></i>
                         </div>
-                        <h3>Web Development</h3>
-                        <p>Custom website development using the latest technologies including React, Node.js, and modern frameworks. We build responsive, fast, and SEO-optimized websites that convert visitors into customers.</p>
+                        <h3>Data Infrastructure</h3>
+                        <p>Your remote extension in the datacenter — providing immediate, hands-on assistance without the need for your
+                            team to
+                            travel. Professional IT infrastructure services you can rely on.</p>
                         <ul class="service-detail-features">
-                            <li>Custom Web Applications</li>
-                            <li>E-Commerce Solutions</li>
-                            <li>CMS Development</li>
-                            <li>API Integration</li>
-                            <li>Performance Optimization</li>
+                            <li>Remote Datacenter Support</li>
+                            <li>Network Infrastructure</li>
+                            <li>Storage Solutions</li>
+                            <li>24/7 Infrastructure Monitoring</li>
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-laptop-code" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/datacenter-server.jpg" alt="Data Infrastructure" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
-                </div>
+                </div>                
 
                 <!-- Service 2 -->
                 <div class="service-detail-card fade-in">
@@ -99,9 +98,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-mobile-screen-button" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/code-laptop.jpg" alt="Mobile App Development" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -122,9 +119,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-cloud-arrow-up" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/cloud-serverless.jpg" alt="Cloud Solutions" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -145,9 +140,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-lock" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/cybersecurity.jpg" alt="Cybersecurity" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -155,22 +148,21 @@
                 <div class="service-detail-card fade-in">
                     <div>
                         <div class="service-detail-icon">
-                            <i class="fas fa-brain"></i>
+                            <i class="fas fa-code"></i>
                         </div>
-                        <h3>AI & Machine Learning</h3>
-                        <p>Intelligent automation, predictive analytics, and custom AI solutions to drive business insights and operational efficiency. We help you harness the power of artificial intelligence.</p>
+                        <h3>Web Development</h3>
+                        <p>Custom website development using the latest technologies including React, Node.js, and modern frameworks. We
+                            build responsive, fast, and SEO-optimized websites that convert visitors into customers.</p>
                         <ul class="service-detail-features">
-                            <li>Predictive Analytics</li>
-                            <li>Process Automation</li>
-                            <li>Chatbots & Virtual Assistants</li>
-                            <li>Data Visualization</li>
-                            <li>ML Model Development</li>
+                            <li>Custom Web Applications</li>
+                            <li>E-Commerce Solutions</li>
+                            <li>CMS Development</li>
+                            <li>API Integration</li>
+                            <li>Performance Optimization</li>
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-robot" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/web-development.jpg" alt="Web Development" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -191,9 +183,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-headset" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/it-support.jpg" alt="IT Support & Maintenance" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
             </div>
