--- a/public/about.html
+++ b/public/about.html
@@ -49,7 +49,7 @@
 
     <main>
         <!-- Page Hero -->
-        <section class="page-hero">
+        <section class="page-hero" style="background-image: url('images/hero-cloud-tech.jpg');">
             <div class="container">
                 <h1>About Kamal IT Solutions</h1>
                 <p>Pioneering digital transformation with innovative technology solutions and a commitment to excellence since our founding.</p>
@@ -61,9 +61,7 @@
             <div class="container">
                 <div class="features-content">
                     <div class="features-image slide-in-left">
-                        <div style="width: 100%; height: 400px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-users" style="font-size: 72px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/conny-schneider-xuTJZ7uD7PI-unsplash.jpg" alt="Team collaboration and teamwork" style="width: 100%; height: 400px; border-radius: 12px; object-fit: cover;">
                     </div>
                     
                     <div class="features-list slide-in-right">
