--- a/public/cloud-solutions.html
+++ b/public/cloud-solutions.html
@@ -62,7 +62,7 @@
 
     <main>
         <!-- Page Hero -->
-        <section class="page-hero">
+        <section class="page-hero" style="background-image: url('images/cloud-serverless.jpg');">
             <div class="container">
                 <h1>Cloud Solutions</h1>
                 <p>Complete cloud services including migration, infrastructure management, and serverless solutions. Scale your business with the power of the cloud.</p>
@@ -88,9 +88,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-cloud-arrow-up" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/cloud-servers.jpg" alt="Cloud Migration" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -110,9 +108,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-server" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/datacenter-server.jpg" alt="Infrastructure Management" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -132,9 +128,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-bolt" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/cloud-serverless.jpg" alt="Serverless Architecture" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -154,9 +148,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-sync-alt" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/hero-cloud-tech.jpg" alt="DevOps & CI/CD" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
             </div>
@@ -167,9 +159,7 @@
             <div class="container">
                 <div class="features-content">
                     <div class="features-image slide-in-left">
-                        <div style="width: 100%; height: 400px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-cloud" style="font-size: 72px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/hero-cloud-tech.jpg" alt="Cloud Solutions" style="width: 100%; height: 400px; border-radius: 12px; object-fit: cover;">
                     </div>
 
                     <div class="features-list slide-in-right">
