--- a/public/cybersecurity.html
+++ b/public/cybersecurity.html
@@ -62,7 +62,7 @@
 
     <main>
         <!-- Page Hero -->
-        <section class="page-hero">
+        <section class="page-hero" style="background-image: url('images/cybersecurity.jpg');">
             <div class="container">
                 <h1>Cybersecurity</h1>
                 <p>Comprehensive security solutions to protect your digital assets from evolving threats. Our experts provide penetration testing, vulnerability assessment, and security auditing services.</p>
@@ -88,9 +88,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-bug" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/security-solutions.jpg" alt="Penetration Testing" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -110,9 +108,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-search-plus" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/security-audit.jpg" alt="Vulnerability Assessment" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -132,9 +128,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-clipboard-check" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/cybersecurity.jpg" alt="Security Auditing" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -154,9 +148,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-shield-alt" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/security-solutions.jpg" alt="Security Consulting" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
             </div>
@@ -167,9 +159,7 @@
             <div class="container">
                 <div class="features-content">
                     <div class="features-image slide-in-left">
-                        <div style="width: 100%; height: 400px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-lock" style="font-size: 72px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/security-solutions.jpg" alt="Security Solutions" style="width: 100%; height: 400px; border-radius: 12px; object-fit: cover;">
                     </div>
 
                     <div class="features-list slide-in-right">
