--- a/public/data-infrastructure.html
+++ b/public/data-infrastructure.html
@@ -62,7 +62,7 @@
 
     <main>
         <!-- Page Hero -->
-        <section class="page-hero">
+        <section class="page-hero" style="background-image: url('images/datacenter-server.jpg');">
             <div class="container">
                 <h1>Data Infrastructure</h1>
                 <p>Your remote extension in the datacenter — providing immediate, hands-on assistance without the need for your team to travel. Professional IT infrastructure services you can rely on.</p>
@@ -88,9 +88,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-server" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/server-room.jpg" alt="Server management and datacenter infrastructure" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -110,9 +108,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-network-wired" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/network-cables.jpg" alt="Network infrastructure and wiring" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -132,9 +128,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-hdd" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/server-infrastructure.jpg" alt="Data backup and storage solutions" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -154,9 +148,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-chart-line" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/support-monitoring.jpg" alt="Infrastructure monitoring and analytics" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
             </div>
@@ -167,9 +159,7 @@
             <div class="container">
                 <div class="features-content">
                     <div class="features-image slide-in-left">
-                        <div style="width: 100%; height: 400px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-database" style="font-size: 72px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/network-infrastructure.jpg" alt="Datacenter and infrastructure management" style="width: 100%; height: 400px; border-radius: 12px; object-fit: cover;">
                     </div>
 
                     <div class="features-list slide-in-right">
