--- a/public/web-development.html
+++ b/public/web-development.html
@@ -62,7 +62,7 @@
 
     <main>
         <!-- Page Hero -->
-        <section class="page-hero">
+        <section class="page-hero" style="background-image: url('images/web-development.jpg');">
             <div class="container">
                 <h1>Web Development</h1>
                 <p>Custom websites and web applications built with cutting-edge technologies. We create responsive, fast, and SEO-optimized websites that drive business growth.</p>
@@ -88,9 +88,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-code" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/code-laptop.jpg" alt="Custom Web Applications" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -110,9 +108,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-shopping-bag" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/web-design.jpg" alt="E-Commerce Solutions" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -132,9 +128,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-mobile-screen-button" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/hero-tech.jpg" alt="Responsive Website Design" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
 
@@ -154,9 +148,7 @@
                         </ul>
                     </div>
                     <div>
-                        <div style="width: 100%; height: 300px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-chart-line" style="font-size: 64px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/web-development.jpg" alt="SEO & Performance Optimization" style="width: 100%; height: 300px; border-radius: 12px; object-fit: cover;">
                     </div>
                 </div>
             </div>
@@ -167,9 +159,7 @@
             <div class="container">
                 <div class="features-content">
                     <div class="features-image slide-in-left">
-                        <div style="width: 100%; height: 400px; background-color: var(--bg-light); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
-                            <i class="fas fa-code-branch" style="font-size: 72px; color: var(--primary-blue);"></i>
-                        </div>
+                        <img src="images/code-laptop.jpg" alt="Web Development" style="width: 100%; height: 400px; border-radius: 12px; object-fit: cover;">
                     </div>
 
                     <div class="features-list slide-in-right">
